plplot (5.7.4-1) UNRELEASED; urgency=low

  [ Andrew Ross ]
  * New upstream release.
  * debian/control, debian/rules: Fix python settings to work with
    numpy rather than Numeric.

  [ Rafael Laboissiere ]
  * debian/control: Replaced the deprecated variable ${Source-Version} by
    ${binary:Version}

 -- Andrew Ross <andrewross@users.sourceforge.net>  Tue, 14 Aug 2007 15:32:07 +0100

plplot (5.7.4.svn.20070523-2) unstable; urgency=low

  * debian/control, debian/rules: Fix python packages to work with
    cmake build system.
  * debian/control, debian/rules: Re-enable the libplplot9-java package.
    Now uses jikes / kaffe to build.
  * debian/control: Tidy up dependencies and include dependencies for
    building documentation from source.
  * debian/libplplot9.README.Debian: Update list to describe current
    packages.

 -- Andrew Ross <andrewross@users.sourceforge.net>  Tue, 19 Jun 2007 08:35:59 +0100

plplot (5.7.4.svn.20070523-1) unstable; urgency=low

  * Initial port of debian packaging files to use new cmake build system

 -- Andrew Ross <andrewross@users.sourceforge.net>  Wed, 23 May 2007 13:35:43 +0100

plplot (5.6.1-9) unstable; urgency=low

  * debian/control: Applied patch from Tomas Pospisek tomake list in
    description render nicely in aptitude (closes: #389142)

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 25 Sep 2006 01:47:57 +0200

plplot (5.6.1-8) unstable; urgency=low

  * debian/control, debian/rules: Do not build the libplplot9-java pacakge
    anymore, at least until the problems in building the PLplot Java
    buildings in the autobuilders is fixed (closes: #384329)

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 29 Aug 2006 22:39:05 +0200

plplot (5.6.1-7) unstable; urgency=low

  * debian/patches/50_check-for-octave2.1.dpatch: Do string comparisons
    instead of numeric comparisons on the value returned by
    split(version,".").  Thanks to Thomas Weber the patch
    (closes: #376247)
