@@ -8,6 +8,8 @@ plplot (5.7.4-1) UNRELEASED; urgency=low
   [ Rafael Laboissiere ]
   * debian/control: Replaced the deprecated variable ${Source-Version} by
     ${binary:Version}
+  * debian/rules: Do not set the RPATH when building shared libraries,
+    complying with the Debian Policy
 
  -- Andrew Ross <andrewross@users.sourceforge.net>  Tue, 14 Aug 2007 15:32:07 +0100
 
